crates/aiken-lang/src/parser/expr/snapshots/block_basic.snap
---
source: crates/aiken-lang/src/parser/expr/block.rs
description: "Code:\n\nlet b = {\n  let x = 4\n\n  x + 5\n}\n"
---
Assignment {
    location: 0..32,
    value: Sequence {
        location: 12..30,
        expressions: [
            Assignment {
                location: 12..21,
                value: Int {
                    location: 20..21,
                    value: "4",
                    base: Decimal {
                        numeric_underscore: false,
                    },
                },
                pattern: Var {
                    location: 16..17,
                    name: "x",
                },
                kind: Let,
                annotation: None,
            },
            BinOp {
                location: 25..30,
                name: AddInt,
                left: Var {
                    location: 25..26,
                    name: "x",
                },
                right: Int {
                    location: 29..30,
                    value: "5",
                    base: Decimal {
                        numeric_underscore: false,
                    },
                },
            },
        ],
    },
    pattern: Var {
        location: 4..5,
        name: "b",
    },
    kind: Let,
    annotation: None,
}
