crates/aiken-lang/src/parser/expr/snapshots/block_single.snap
---
source: crates/aiken-lang/src/parser/expr/block.rs
description: "Code:\n\n{\nfoo\n}\n"
---
Var {
    location: 2..5,
    name: "foo",
}
