crates/aiken-lang/src/parser/expr/snapshots/bytearray_base16.snap
---
source: crates/aiken-lang/src/parser/expr/bytearray.rs
description: "Code:\n\n#\"00aaff\""
---
ByteArray {
    location: 0..9,
    bytes: [
        (
            0,
            0..0,
        ),
        (
            170,
            0..0,
        ),
        (
            255,
            0..0,
        ),
    ],
    preferred_format: HexadecimalString,
}
