crates/aiken-lang/src/parser/expr/snapshots/bytearray_basic.snap
---
source: crates/aiken-lang/src/parser/expr/bytearray.rs
description: "Code:\n\n#[0, 170, 255]"
---
ByteArray {
    location: 0..14,
    bytes: [
        (
            0,
            2..3,
        ),
        (
            170,
            5..8,
        ),
        (
            255,
            10..13,
        ),
    ],
    preferred_format: ArrayOfBytes(
        Decimal {
            numeric_underscore: false,
        },
    ),
}
