crates/aiken-lang/src/parser/expr/snapshots/bytearray_utf8_escaped.snap
---
source: crates/aiken-lang/src/parser/expr/bytearray.rs
description: "Code:\n\n\"\\\"aiken\\\"\""
---
ByteArray {
    location: 0..11,
    bytes: [
        (
            34,
            0..0,
        ),
        (
            97,
            0..0,
        ),
        (
            105,
            0..0,
        ),
        (
            107,
            0..0,
        ),
        (
            101,
            0..0,
        ),
        (
            110,
            0..0,
        ),
        (
            34,
            0..0,
        ),
    ],
    preferred_format: Utf8String,
}
