crates/aiken-lang/src/parser/expr/snapshots/empty_array.snap
---
source: crates/aiken-lang/src/parser/expr/list.rs
description: "Code:\n\narray[]"
---
Array {
    location: 0..7,
    elements: [],
}
