crates/aiken-lang/src/parser/expr/snapshots/empty_list.snap
---
source: crates/aiken-lang/src/parser/expr/list.rs
description: "Code:\n\n[]"
---
List {
    location: 0..2,
    elements: [],
    tail: None,
}
