crates/aiken-lang/src/parser/expr/snapshots/error_basic.snap
---
source: crates/aiken-lang/src/parser/expr/error_todo.rs
description: "Code:\n\nerror @\"foo\"\n"
---
Trace {
    kind: Error,
    location: 0..12,
    then: ErrorTerm {
        location: 0..12,
    },
    text: String {
        location: 6..12,
        value: "foo",
    },
}
